--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 /.idea/other.xml
 /.idea/vcs.xml
 /.idea/workspace.xml
-/facerec_image_processing/train_data/train_data.yml
+/.facerec_image_processing/train_data/train_data.yml
